# SignificanceTestTool

./: .gitignore  PROJECT_SETUP.md  QUICKSTART.md  README.md  kill.sh  start.sh  start_backend.sh  start_frontend.sh  start_nginx.sh
backend/: app.py  example_usage.py  model_comparison_tool.py  pyproject.toml  quick_analysis.py  requirements.txt.backup  配置示例.py
document/: 使用说明.md  工具使用总结.md
frontend/: app.js  index.html  style.css  前端效果.jsx  搜应引擎评测-Prompt2Doclist_analysis_report.html
nginx/: nginx.conf
test/: index.html.backup  start.sh.backup
